tests/NormalTests/paczka1/small_fuzzy/75659945.err
Error in line 1: gyg7vj A666 99,5
Error in line 2: gVe A738 266,8
Error in line 4: gyg7vj A738 31,5
Error in line 9: gyg7vj S717 33,2
